added burger to projects

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,7 +34,7 @@
     }
   }
   
-   .topbar-responsive .menu .topbar-responsive-button {
+  .topbar-responsive .menu .topbar-responsive-button {
     color: #fefefe;
     border-color: #fefefe;
     border-radius: 5000px;
@@ -46,7 +46,7 @@
     border-color: #c6d1d8;
   } 
   
- @media screen and (max-width: 39.9375em) {
+@media screen and (max-width: 39.9375em) {
     .topbar-responsive .menu .topbar-responsive-button {
       width: 100%;
       margin: 0.875rem 0;
@@ -129,74 +129,14 @@
     }
   }
 
-  
-
-/* Deployed link button project 1 */
-/* .button-rounded-hover {
-    border: 0;
-    border-radius: 5000px;
-    padding: 1rem 2rem;
-    text-transform: uppercase;
-    position: relative;
-    overflow: hidden;
-    font-size: 1rem;
-    background-color: black;
-    margin-left: 37%;
-    margin-top: 2%;
-    display: inline-block;
-    letter-spacing: 2px;
-    transition: all 0.35s ease;
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-  }
-  
-  .button-rounded-hover:before {
-    opacity: 0;
-    content: "";
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    border-radius: inherit;
-    background-color: #fefefe;
-    transition: all 0.3s;
-    -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-  
-  .button-rounded-hover:after {
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    content: '';
-    border-radius: inherit;
-  }
-  
-  .button-rounded-hover:hover,
-  .button-rounded-hover:focus {
-    background-color: #9400D3;
-  }
-  
-  .button-rounded-hover:hover:before,
-  .button-rounded-hover:focus:before {
-    -webkit-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-            transform: translateX(0%);
-    opacity: 0.25;
-  } */
-  
   /* Project one title */
-  #titleProjectOne , #titleWork{
+  #titleProjectOne , #titleBurger{
       margin-top: 20px;
       text-align: center;
       font-family: 'Times New Roman', Times, serif;
   }
 
-  #project1About , #workAbout {
+  #project1About , #burgerAbout {
       margin-left: 40px;
       font-size: 18px;
       margin-right: 40px;
